@@ -41,6 +41,7 @@ Bug fixes:
 - PR#5712: some documentation problems
 - PR#5719: ocamlyacc generates code that is not warning 33-compliant
 - PR#5742: missing bound checks in Array.sub
+- PR#5757: GC compaction bug (crash)
 
 
 OCaml 4.00.0:
